--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "gsap": "./gsap-bonus.tgz",
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -19,6 +20,8 @@
     "@types/react-dom": "18.0.6",
     "eslint": "8.26.0",
     "eslint-config-next": "12.3.1",
-    "typescript": "4.8.4"
+    "sass": "^1.55.0",
+    "typescript": "4.8.4",
+    "webpack": "^5.74.0"
   }
 }
